@@ -3,6 +3,8 @@
 - /listopts geeft nu ook values terug.
 - mooproxy.crashed gerenamed naar mooproxy.panic
 - /help flink opgepimpt
+- Weg met "authentication succesful", lang leve "this is mooproxy".
+  Ook geeftie nu /help, wat ook handig is voor mensen die hun commandstring vergeten zijn. [from: christian]
 
 
 
